# Recalc_Final_Demo_Fork

./: path_info.pri  subdirs.pri  subspace_simulator.pro
src/: CMakeLists.txt  common.pri  config.pri
src/basis_generation/: MatrixOps.cpp  MatrixOps.h  RedSVD_2.hpp  basis_generation.pri  basis_generator.cpp  basis_generator.h  basis_generator_3.cpp  basis_generator_3.h  cubica_basis_generator.cpp  cubica_basis_generator.h  multi_domain_basis_generator.cpp  multi_domain_basis_generator.h  redsvd.hpp  single_domain_basis_generator.cpp  single_domain_basis_generator.h  single_domain_basis_generator_3.cpp  single_domain_basis_generator_3.h  util.hpp
src/bvh/: CMakeLists.txt  bvh.cpp  bvh.h  bvh.pri  collision_util.h  tet_collider.cpp  tet_collider.h  util.h
src/cubature_optimization/: CubatureObjDomain.cpp  CubatureObjDomain.h  CubatureObjInterface.cpp  CubatureObjInterface.h  cubature_optimization.pri  multi_domain_cubature.cpp  multi_domain_cubature.h  single_domain_cubature.cpp  single_domain_cubature.h
src/cubica/: cubica.pri  cubica_simulator.cpp  cubica_simulator.h  cubica_tet.cpp  cubica_tet.h
src/demo/: demo.pri  hammock_support.cpp  hammock_support.h
src/global/: CMakeLists.txt  global.cpp  global.h  global.pri
src/k_means/: k_means.h  k_means.pri
src/lib/: CMakeLists.txt  affine_transformer.cpp  affine_transformer.h  biconjugate_gradient_stablized.cpp  biconjugate_gradient_stablized.h  binary_file_io.cpp  binary_file_io.h  blas_wrapper.h  config_file.cpp  config_file.h  conjugate_gradient_solver.cpp  conjugate_gradient_solver.h  cubic_solver.h  fixed_matrix_utility.h  fixed_vector.h  fixed_vector_utility.h  fps_calculator.h  lib.pri  macro_constant.h  matlab_io.h  print_macro.h  profiler.cpp  profiler.h  progress_bar.cpp  progress_bar.h  quaternion.cpp  quaternion.h  singleton.h  statistics.h  string_formatter.cpp  string_formatter.h  svd.h  text_file_io.cpp  text_file_io.h  timer.h  triangle_mesh_creator.cpp  triangle_mesh_creator.h  vector_io.h  vector_lib.h
src/lma_calculator/: LMACalculator.cpp  LMACalculator.h  lma_calculator.pri
src/marching_cube/: CIsoSurface.cpp  CIsoSurface.h  hammock_level_set.h  marching_cube.pri
src/obj_mtl_renderer/: cbmp.h  obj_mtl_renderer.pri  pconsole.cpp  pconsole.h  simOBJ.h  simobj.cpp  strmanip.h
src/opengl_util/: camera.cpp  camera.h  enviroment_cube_map.cpp  enviroment_cube_map.h  opengl_header.h  opengl_helper.cpp  opengl_helper.h  opengl_material.cpp  opengl_material.h  opengl_soft_shadow_render.cpp  opengl_soft_shadow_render_2.cpp  opengl_soft_shadow_render_2.h  opengl_util.pri  opengl_video_recorder.cpp  opengl_video_recorder.h  ppm_io.cpp  ppm_io.h  reflective_object_renderer.cpp  reflective_object_renderer.h  scene.cpp  scene.h  textured_triangle_mesh_renderer.cpp  textured_triangle_mesh_renderer.h  triangle_mesh_render.cpp  triangle_mesh_render.h
src/pbd_rod/: CMakeLists.txt  elastic_rod_shape.cpp  elastic_rod_shape.h  frame_attachment.cpp  frame_attachment.h  pbd_elastic_rod.cpp  pbd_elastic_rod.h  pbd_rod.pri  pbd_rod_simulator.cpp  pbd_rod_simulator.h
src/pose/: CMakeLists.txt  IO_FUNC.h  MY_MATH.h  VECTOR_TOOLS.h  interactive_mesh_partitioner.cpp  interactive_mesh_partitioner.h  pose.pri  pose_input_handler.cpp.autosave  pose_sampler.cpp  pose_sampler.h  pose_viewer_simulator.cpp  pose_viewer_simulator.h  sample_pose_simulator.cpp  sample_pose_simulator.h  skeleton.cpp  skeleton.h  skeleton_adjuster.h  skeleton_builder.cpp  skeleton_builder.h  skeleton_node.cpp  skeleton_node.h  skeleton_rotator.cpp  skeleton_rotator.h  tet.cpp  tet.h  tet_3.cpp  tet_3.h  tet_mesh_simulator.cpp  tet_mesh_simulator.h  user_interaction.cpp  user_interaction.h
src/procedural_beam/: procedural_beam.cpp  procedural_beam.h  procedural_beam.pri
src/qt_opengl_util/: CMakeLists.txt  input_handler.h  qt_gl_3d_scene_navigator.cpp  qt_gl_3d_scene_navigator.h  qt_object_selector.cpp  qt_object_selector.h  qt_object_selector.h.cpp  qt_opengl_util.pri  selectable_object.h
src/shape_op/: Constraint.cpp  Constraint.h  Solver.cpp  Solver.h  shape_op.pri  shape_op_tet.cpp  shape_op_tet.h
src/solver/: BLOCK_MATRIX_GRAPH.cpp  BLOCK_MATRIX_GRAPH.h  CMakeLists.txt  MATRIX.h  SOLVER_MATH.h  mixed_sparse_matrix.cpp  mixed_sparse_matrix.h  solver.pri
src/subspace/: CMakeLists.txt  basis_io.cpp  basis_io.h  mixed_multi_domain_simulator.cpp  mixed_multi_domain_simulator.h  mixed_multi_domain_tet.cpp  mixed_multi_domain_tet.h  multi_domain_subspace_simulator.cpp  multi_domain_subspace_simulator.h  multi_domain_tet.cpp  multi_domain_tet.h  partitioned_mesh_generator.cpp  partitioned_mesh_generator.h  random_subspace_pose_viewer.cpp  random_subspace_pose_viewer.h  subspace.pri  subspace_pose_sample_simulator.cpp  subspace_pose_sample_simulator.h  subspace_pose_viewer.cpp  subspace_pose_viewer.h  subspace_simulator.cpp  subspace_simulator.h  subspace_tet.cpp  subspace_tet.h  subspace_tet_3.cpp  subspace_tet_3.h
src/tet_mesh_io/: CMakeLists.txt  binary_tet_mesh_io.cpp  binary_tet_mesh_io.h  cubica_tet_mesh_io.cpp  cubica_tet_mesh_io.h  msh_tet_mesh_io.cpp  msh_tet_mesh_io.h  neutral_format_io.cpp  neutral_format_io.h  tet_gen_mesh_io.cpp  tet_gen_mesh_io.h  tet_mesh_io.pri  tetrahedral_mesh_io.cpp  tetrahedral_mesh_io.h  vega_tet_mesh_io.cpp  vega_tet_mesh_io.h
src/tri_mesh_io/: CMakeLists.txt  mesh_viewer.cpp  mesh_viewer.h  obj_mesh_io.cpp  obj_mesh_io.h  off_mesh_io.cpp  off_mesh_io.h  tri_mesh_io.pri  triangular_mesh.cpp  triangular_mesh.h  triangular_mesh_io.cpp  triangular_mesh_io.h
src/vega/: CMakeLists.txt  StVKForceModel.cpp  StVKForceModel.h  eig3.cpp  eig3.h  (+21 more)
(+191 files in other folders)
